--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,21 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/student_management
 spring.datasource.username=postgres
 spring.datasource.password=password
 
+#server.servlet.context-path=/studentapi
+studentrestapi.services.url=http://localhost:8080/students/
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql=true
 spring.flyway.baseline-on-migrate=true
+
+#spring.profiles.active=dev
+
+logging.file.name=logs/application.log
+logging.level.root=info
+logging.level.org.org.springframework=error
+logging.level.com.khanhnhb.springweb.controllers.StudentRestController=error
+
+#file.upload-dir=./logs
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
