--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ logging.level.org.org.springframework=error
 logging.level.com.khanhnhb.springweb.controllers.StudentRestController=error
 
 #file.upload-dir=./logs
+file.upload-dir=./logs
 
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
