--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=password
 studentrestapi.services.url=http://localhost:8080/students/
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.flyway.baseline-on-migrate=true
 
@@ -16,7 +17,6 @@ logging.level.root=info
 logging.level.org.org.springframework=error
 logging.level.com.khanhnhb.springweb.controllers.StudentRestController=error
 
-#file.upload-dir=./logs
 file.upload-dir=./logs
 
 management.endpoint.health.show-details=always
