--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ studentrestapi.services.url=http://localhost:8080/students/
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.flyway.baseline-on-migrate=true
 
 #spring.profiles.active=dev
