--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.show-sql=true
 spring.flyway.baseline-on-migrate=true
-
+spring.messages.basename=messages
 #spring.profiles.active=dev
 
 logging.file.name=logs/application.log
